--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -55,7 +55,7 @@
      {{/if}} 
 
     
-       <img onclick="location.href='/';" src="https://img.apksum.com/7d/com.bazaar.app/2.1.5.6/icon.png" alt="">
+       <img onclick="location.href='/';" src="https://img.apksum.com/7d/com.app/2.1.5.6/icon.png" alt="">
          
      <div class="shop">
        <a href="/shopping-cart/"><img src="https://www.pinclipart.com/picdir/big/179-1792672_shopping-clip-art-black-and-white.png" alt=""><span class="badge">{{session.cart.totalQty}}</span></a>
