--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,28 +1,10 @@
-{{!-- {{#each products  }}
-    <div class="row">
-        {{#each this}}
-        <div class="col-sm-6 col-md-4">
-        <div class="card">
-            <img src="{{ this.imagePath }}" alt="..." class="img-responsive">
-            <div class="caption">
-                <h3>{{ this.title }}</h3>
-                <p class="description">{{ this.description }}</p>
-                <div class="clearfix">
-                    <div class="price pull-left">${{ this.price }}</div>
-                    <a href="/add-to-cart/{{this._id}}" class="btn btn-success pull-right" role="button">add to shop</a>
-                </div>
-            </div>
-        </div>
-    </div>
-        {{/each}}
-</div>
-{{/each}} --}}
+
 
 {{#each products  }}
 <div class="main" onmousemove='locate(event)' onclick='click(event)' >
     {{#each this}}
 	<div class="kala 1 menarjonboun" >
-		<div  class="picture" data-aos="fade-left" data-aos-anchor-placement="center-bottom"  ><img   src="{{ this.imagePath }}"   ></div>
+		<div  class="picture" data-aos="fade-up" data-aos-anchor-placement="center-bottom"  ><img   src="{{ this.imagePath }}"   ></div>
 		<div class="details " data-aos="fade-down" data-aos-anchor-placement="center-bottom">
 			<h1>{{ this.title }}</h1>
 			<span>{{ this.description }}</span>
